# car_insurance_comparison_assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: .gitignore
.claude/agents/: backend-engineer.md  frontend-engineer.md
.claude/skills/alignment/: SKILL.md
.claude/skills/code-simplifier/: SKILL.md
backend/: Dockerfile  app.py  config.py  deadlines.py  logic.py  pdf.py  schemas.py
backend/data/: offers.py
backend/graph/: build.py  state.py
backend/graph/nodes/: coverage_compare.py  decision.py  intake.py  market_research.py  report.py  validate.py  verify_offers.py
backend/graph/tools/: search.py
backend/services/llm/: anthropic_provider.py  base.py  factory.py  stub_provider.py
frontend/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
tests/: test_deadline.py  test_graph_stub.py  test_schemas.py  test_verify_offers.py
